[package]
name = "ux-dataflow"
version = "0.1.2"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-dataflow"
repository = "https://github.com/angular-rust/ux-dataflow"
documentation = "https://docs.rs/ux-dataflow"
description = "Data Processing Library"
keywords = ["datatable", "dataframe", "datastream", "data-structures"]
categories = ["data-structures"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "dataflow"

[dependencies]
intmap = "0.7"